--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "license": "MIT",
   "dependencies": {
     "better-sqlite3": "^4.1.0",
+    "bluebird": "^3.5.1",
     "jest": "^22.4.2",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.14",
     "node-fetch": "^1.6.3",
-    "pushbullet": "^2.1.0"
+    "pushbullet": "^2.1.0",
+    "redis": "^2.8.0",
+    "torrent-scrape": "^1.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
